# Package

./: README.md  explain_model.py  ocr.py  pyproject.toml  requirements.txt  setup.py  test.py  test_ocr.py
.github/workflows/: Package-Test.yml  package-publish.yml
modules/: __init__.py  data_augmentation_module.py  edge_optimization_module.py  sentiment_analyzer_module.py
modules/EdgeHandler/: base_handler.py  tf_handler.py  torch_handler.py
tests/: test_augmentation.py  test_ocr.py  test_sentiment.py  test_xai.py
